Modify 'about us' styling The max width of the article tag is set to 50% to increase readability of text and improve look of image wrapping. Whether this should be default for all articles must be discussed at a later date, but for now this works. The article's position relative to the header is fixed in a separate issue.

--- a/Website/style.css
+++ b/Website/style.css
@@ -6,6 +6,7 @@
   left: 0%;
   right: 0%;
   border-bottom: 3px solid rgb(216, 24, 24);
+  z-index: 99;
 }
 .header .links {
   display: flex;
@@ -39,7 +40,6 @@
 
 body {
   background-color: #f8f6ee;
-  margin-top: 100px;
 }
 
 img {
@@ -48,9 +48,8 @@ img {
 
 /*All elements with lots of text*/
 article {
-  position: absolute;
   font-family: Andale Monoe, monospace;
-  max-width: 75%;
+  max-width: 50%;
   font-size: 12px;
   margin-left: auto;
   margin-right: auto;
